# sharp

./: Cargo.toml
scenarios/: smoothbot_intermediate.lua  smoothbot_invincible.lua  tracking_basic.lua
src/: app.rs  main.rs
src/gfx/: camera.rs  crosshair_renderer.rs  egui_renderer.rs  floor_renderer.rs  mesh.rs  mod.rs  scene_renderer.rs  skybox_renderer.rs  texture.rs  vertex.rs
src/gfx/shaders/: crosshair.wgsl  floor.wgsl  scene.wgsl  skybox.wgsl
src/render/: egui_renderer.rs  mod.rs  scene_renderer.rs
src/scenario/: mod.rs
